--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
-  "name": "prism-theme-one-dark",
+  "name": "prism-theme-one-dark-ds",
   "description": "Theme based on Atom Dark One to Prism JS",
   "main": "index.js",
   "authors": [
-    "adrigm"
+    "adrigm",
+    "derek-shnosh"
   ],
   "license": "MIT",
   "keywords": [
@@ -12,7 +13,7 @@
     "onedark",
     "one-dark"
   ],
-  "homepage": "https://github.com/AGMStudio/prism-theme-one-dark",
+  "homepage": "https://github.com/derek-shnosh/prism-theme-one-dark-ds",
   "ignore": [
     "**/.*",
     "node_modules",
